Setup proxy for performance test run

--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http-proxy": "^1.18.0",
     "nodemon": "^2.0.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "newrelic": "^6.5.0"
   }
 }
